   data/filetype_extensions.conf:
   Make filetype groups configurable using [Groups] in
   filetype_extensions.conf.
   Read filetype_extensions.conf when calling filetypes_init_types(),
   don't require doclist initialization.
 * src/filetypes.c:
   Change Programming Languages filetype group label -> Compiled
   Languages.
   Use 'source file' title for custom filetypes.


2011-04-26  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/callbacks.c, src/document.c, src/document.h,
   src/documentprivate.h, src/editor.c, src/sidebar.c:
   Make sure to update the tag list only for the current document,
   avoiding idle updates to show the tag list for the wrong document.
 * src/callbacks.c, src/document.c, src/documentprivate.h,
   src/sidebar.c:
   Avoid changing the tag tree if it's not the one of the current
   document, fixing showing the wrong tag list when reloading
   configuration files.


2011-04-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Fix warning in utils_find_open_xml_tag() with malformed tags like
   <~foo> (oops).


2011-04-24  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/editor.c:
   Don't update the tag list when the user is typing (patch by Yura
   Siamashka, thanks).
 * src/filetypes.c:
   When copying filetype groups, add keys from both system and user
   ones, making sure user's ones have precedence over system ones.


2011-04-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/plugindata.h, src/plugins.c,
   plugins/geanyfunctions.h:
   Add utils_find_open_xml_tag_pos() API function (patch by Eugene
   Arshinov, thanks).
 * src/templates.c:
   Replace dates on template insertion, not when loading templates.


2011-04-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix multiple snippet cursor positions for Tabs + Spaces mode.
   Simplify editor_insert_snippet() code now we use cursor marker
   strings.