@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2011-04-01" />
+<meta name="date" content="2011-04-02" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2011-04-01</td></tr>
+<td>2011-04-02</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -2641,11 +2641,6 @@ to the specified command.</dd>
 <p>This data is used as meta data for various template text to insert into
 a document, such as the file header. You only need to set fields that
 you want to use in your template files.</p>
-<div class="note">
-<p class="first admonition-title">Note</p>
-<p class="last">For changes made here to take effect, you must either select
-<em>Tools-&gt;Reload Configuration</em> or restart Geany.</p>
-</div>
 <img alt="./images/pref_dialog_templ.png" src="./images/pref_dialog_templ.png" />
 <div class="section">
 <h4><a class="toc-backref" href="#id122" id="template-data" name="template-data">Template data</a></h4>
@@ -5270,8 +5265,7 @@ also force this by selecting <em>Tools-&gt;Reload Configuration</em>.</p>
 meta data is only used for the ChangeLog and File header templates.</p>
 <p>In the configuration dialog you can find a tab &quot;Templates&quot; (see
 <a class="reference" href="#template-preferences">Template preferences</a>). You can define the default values
-which will be inserted in the templates. You should select
-<em>Tools-&gt;Reload Configuration</em> or restart Geany after making changes.</p>
+which will be inserted in the templates.</p>
 </div>
 <div class="section">
 <h3><a class="toc-backref" href="#id204" id="file-templates" name="file-templates">File templates</a></h3>
@@ -6540,7 +6534,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2011-04-01 16:25 UTC.
+Generated on: 2011-04-26 16:36 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
